--- a/components/PrimarySourceSetsComponents/BreadcrumbsModule/BreadcrumbsModule.css
+++ b/components/PrimarySourceSetsComponents/BreadcrumbsModule/BreadcrumbsModule.css
@@ -13,7 +13,6 @@
   padding-top: 0;
   padding-bottom: 0;
   font-size: 1rem;
-  line-height: 1.25rem;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
